--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
 							</li>
 <li>
 												<a href="#">
-													<img src="https://randomuser.me/api/portraits/men/61.jpg" width="50px" class="img-circle img-responsive  circleborder center-block">
-													<p class="ogname"><strong>JOHN DOE F</strong></p>
+													<img src="https://randomuser.me/api/portraits/men/50.jpg" width="50px" class="img-circle img-responsive  circleborder center-block">
+													<p class="ogname"><strong>JOHN DOE N</strong></p>
 													<p class="ogtitle">DIRECTOR</p>
 												</a>
 											</li>
