New sample  organization chart based on person only.

--- a/index.html
+++ b/index.html
@@ -1,22 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>Branched</title>
+		<title>Sample 1</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 		<link rel="stylesheet" href="charts.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+		
 	</head>
+<nav class="navbar navbar-default fixed-top">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>                        
+      </button>
+      <a class="navbar-brand" href="#">Fancy Oranization Chart</a>
+    </div>
+    <div class="collapse navbar-collapse" id="myNavbar">
+      
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="index.html">Sample 1</a></li>
+        <li><a href="sample-2.html">Sample 2</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
 	<body class="text-center">
-		<div class="container center-block">
+		<div class="container center-block containeradjust">
 			<div class="ogchart">
 				<ul>
 					<li>
 						<a href="#" class="department">BOARD OF DIRECTOR</a>
 						<ul>
-							<li>
+							<li data-toggle="tooltip" data-placement="bottom" >
 								<a href="#">
 									<img src="https://randomuser.me/api/portraits/men/83.jpg" width="50px" width="50px" class="img-circle img-responsive  circleborder center-block">
 									<p class="ogname"><strong>JOHN DOE A</strong></p>
